# WarehouseTurtlebot

./: .gitignore  .gitmodules  CAMERA_CALIBRATION_GUIDE.md  CAMERA_CHECK_FIX.md  CAMERA_ENHANCEMENTS_SUMMARY.md  CAMERA_TO_TURTLEBOT_GUIDE.md  FINAL_CONFIGURATION.md  INSPECTION_APRILTAG_INTEGRATION.md  INSPECTION_IMPROVEMENTS.md  INSPECTION_IMPROVEMENTS_APPLIED.md  README.md  RETURN_HOME_QUICK_REFERENCE.md  RETURN_TO_HOME_IMPLEMENTATION.md  SCRIPT_INTEGRATION_COMPLETE.md  TEMPORAL_FILTERING_SUMMARY.md  TF2_CRASH_SOLUTION_SUMMARY.md  TF2_NETWORK_FIX.md  TF_STABILITY_GUIDE.md  TUNING_SUMMARY.md  WAREHOUSE_SETUP.md  battery_return  kill_all.sh  launch_mgen.sh  launch_warehouse.sh  launch_warehouse_mgen.sh  run_slam_no_conda.sh  test_camera_detection.py  test_opencv  test_opencv.cpp  turtlebot_start_camera.sh
turtlebot3_ws/src/mtrx3760_battery/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md  package.xml
turtlebot3_ws/src/mtrx3760_battery/config/: battery_params.yaml
turtlebot3_ws/src/mtrx3760_battery/include/: battery_gui_display.hpp  battery_monitor.hpp  battery_terminal_display.hpp
turtlebot3_ws/src/mtrx3760_battery/launch/: battery_monitoring.launch.py
turtlebot3_ws/src/mtrx3760_battery/src/: battery_gui_display.cpp  battery_monitor_node.cpp  battery_simulator_node.cpp  battery_terminal_display.cpp
turtlebot3_ws/src/mtrx3760_battery/web/: .gitignore  README.md  index.html  package.json
turtlebot3_ws/src/mtrx3760_battery/web/src/: App.css  App.jsx
turtlebot3_ws/src/mtrx3760_battery/web/src/components/: BatteryChart.css  BatteryChart.jsx  BatteryGauge.css  BatteryGauge.jsx  BatteryInfo.css  BatteryInfo.jsx
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt  package.xml
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/include/turtlebot3_gazebo/: CCameraRedDetector.hpp  CTurtlebot3Drive.hpp  CWallFollowingController.hpp  turtlebot3_drive.hpp
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/apriltag_36h11_id0/: model.config  model.sdf
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/apriltag_36h11_id1/: model.config  model.sdf
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/apriltag_36h11_id2/: model.config  model.sdf
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/apriltag_36h11_id3/: model.config  model.sdf
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/apriltag_36h11_id4/: model.config  model.sdf
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/params/: turtlebot3_burger_bridge.yaml
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/src/: CCameraRedDetector.cpp  CPIDController.cpp  CTurtlebot3Drive.cpp  CTurtlebot3Sensor.cpp  CWallFollowingController.cpp  turtlebot3_drive.cpp
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/urdf/: turtlebot3_burger_cam.urdf
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: enclosed_maze.world  warehouse_shelves.world
turtlebot3_ws/src/turtlebot3_simulations/warehouse_robot_system/: CMakeLists.txt  README_SLAM.md  package.xml
turtlebot3_ws/src/turtlebot3_simulations/warehouse_robot_system/action/: ReturnHome.action
turtlebot3_ws/src/turtlebot3_simulations/warehouse_robot_system/config/: slam_toolbox.rviz  slam_toolbox_localization_params.yaml  slam_toolbox_params.yaml
turtlebot3_ws/src/turtlebot3_simulations/warehouse_robot_system/include/: AprilTagDetector.hpp  AutonomousExplorationRobot.hpp  Camera_Node.hpp  ColourDetector.hpp  DeliveryRobot.hpp  DeliveryStructures.hpp  ExplorationPlanner.hpp  FrontierSearch.hpp  ImageProcessor_Node.hpp  InspectionRobot.hpp  MotionController.hpp  Odometer.hpp  PathPlanner.hpp  SlamController.hpp  autonomous_slam_controller.hpp  exploration_manager.hpp  frontier_search.hpp  navigation_controller.hpp  path_planner.hpp  priority_queue.hpp  slam_state_manager.hpp  slam_types.hpp  warehouse_robot_system.hpp
turtlebot3_ws/src/turtlebot3_simulations/warehouse_robot_system/include/Camera/: AprilTagDetector.hpp  Camera_Node.hpp  ColourDetector.hpp  ImageProcessor_Node.hpp
turtlebot3_ws/src/turtlebot3_simulations/warehouse_robot_system/include/Robot/: AutonomousExplorationRobot.hpp  DeliveryRobot.hpp  DeliveryStructures.hpp  InspectionRobot.hpp  InspectionStructures.hpp  Robot.hpp  WarehouseManager.hpp  WarehouseRobot.hpp  WarehouseRobotBase.hpp
turtlebot3_ws/src/turtlebot3_simulations/warehouse_robot_system/include/SLAM/: ExplorationPlanner.hpp  FrontierSearch.hpp  MotionController.hpp  PathPlanner.hpp  SlamController.hpp  TwistStampedBridge.hpp  ZoneMarkerNode.hpp  priority_queue.hpp
turtlebot3_ws/src/turtlebot3_simulations/warehouse_robot_system/include/Sensors/: LidarController.hpp  OdomController.hpp
turtlebot3_ws/src/turtlebot3_simulations/warehouse_robot_system/launch/: autonomous_slam.launch.py  slam_toolbox_localization.launch.py  slam_toolbox_mapping.launch.py  spawn_turtlebot3_autonomous.launch.py
turtlebot3_ws/src/turtlebot3_simulations/warehouse_robot_system/src/: AprilTagDetector.cpp  AutonomousExplorationRobot.cpp  Camera_Node.cpp  ColourDetector.cpp  DeliveryRobot.cpp  ExplorationPlanner.cpp  FrontierSearch.cpp  ImageProcessor_Node.cpp  InspectionRobot.cpp  MotionController.cpp  Odometer.cpp  PathPlanner.cpp  SlamController.cpp  apriltag_detector_main.cpp  autonomous_slam_controller.cpp  autonomous_slam_main.cpp  autonomous_slam_node.cpp  delivery_robot_node.cpp  exploration_manager.cpp  frontier_search.cpp  inspection_robot_node.cpp  navigation_controller.cpp  path_planner.cpp  priority_queue.cpp  slam_state_manager.cpp  slam_test.cpp  twist_stamped_bridge.cpp  warehouse_robot_main.cpp  warehouse_robot_system.cpp  zone_marker_node.cpp
turtlebot3_ws/src/turtlebot3_simulations/warehouse_robot_system/src/Camera/: AprilTagDetector.cpp  Camera_Node.cpp  ColourDetector.cpp  ImageProcessor_Node.cpp
turtlebot3_ws/src/turtlebot3_simulations/warehouse_robot_system/src/Robot/: AutonomousExplorationRobot.cpp  DeliveryRobot.cpp  InspectionRobot.cpp  WarehouseManager.cpp  WarehouseRobot.cpp  (+5 more)
(+234 files in other folders)
